# Deutsch

./: .gitignore  pyproject.toml  requirements.txt
Datenbank/: master_word_bank.csv  vocabulary.csv  vocabulary_2.csv
Datenbank/Phrasen/: phrase_book.csv  pre_phrase_book.csv
Datenbank/Wörter/: food.csv  furnature.csv  jobs.csv  numbers.csv  other.csv  people.csv  places.csv  sports.csv  time.csv  verbs.csv  weather.csv
Datenbank/Wörter/Nouns/: Animal.csv  Beverages.csv  Body.csv  Clothing.csv  Countries.csv  DaysOfWeek.csv  Electronics.csv  Food.csv  Home.csv  Job.csv  Location.csv  Materials.csv  Measurements.csv  Misc.csv  Months.csv  Nature.csv  People.csv  Sport.csv  Time.csv  Transportation.csv  Weather.csv
Datenbank/Wörter/Other/: Adjectives.csv  Adverbs.csv  Colour.csv  CommonSayings.csv  Conjunctions.csv  MISC.csv  Numbers.csv  Prepositions.csv  Pronouns.csv
Datenbank/Wörter/Verbs/: present.csv
Skripte/: core_scripts.py  kern.py  leitner_system.py  meta_data.py  notes.txt  playground.py  styles.py  text_to_speech.py  ui_flash_card.py  verbs.py  verbs.txt  write_core_words.py
Test/: test_leitner_system.py
