[tool.poetry]
name = "deutsch"
version = "0.1.0"
description = ""
authors = ["lse30 <38194693+lse30@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.4"
gtts = "^2.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
